# microdns

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross-amd64  Dockerfile.scratch  README.md  build.sh  deploy.sh  deploy_mdns_gw.sh  sync_mdns_gw.py
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
config/: microdns-coordinator.toml  microdns-leaf.toml  microdns.toml  stormd.toml
config/deploy/: microdns-g10.toml  microdns-g11.toml  microdns-gt.toml  microdns-gw.toml  microdns-gw252.toml  microdns-main.toml  microdns-replica.toml  reservations-g10.toml  reservations-g11.toml  reservations-main.toml
crates/microdns-api/: Cargo.toml  build.rs
crates/microdns-api/src/: dashboard.rs  lib.rs  security.rs  ws.rs
crates/microdns-api/src/grpc/: mod.rs  service.rs
crates/microdns-api/src/rest/: cluster.rs  connectivity.rs  dhcp.rs  dhcp_config.rs  dhcp_pools.rs  dhcp_reservations.rs  dhcp_routes.rs  dns_forwarders.rs  health.rs  ipam.rs  lb.rs  leases.rs  logs.rs  mod.rs  records.rs  watch.rs  zones.rs
crates/microdns-auth/: Cargo.toml
crates/microdns-auth/src/: catalog.rs  lib.rs  server.rs  transfer.rs  zone.rs
crates/microdns-core/: Cargo.toml
crates/microdns-core/src/: config.rs  db.rs  error.rs  lib.rs  log_buffer.rs  query_tracker.rs  reverse.rs  types.rs
crates/microdns-dhcp/: Cargo.toml
crates/microdns-dhcp/src/: dns_register.rs  lease.rs  lib.rs
crates/microdns-dhcp/src/slaac/: ra.rs
crates/microdns-dhcp/src/v4/: mod.rs  packet.rs  pool.rs  server.rs
crates/microdns-dhcp/src/v6/: packet.rs  server.rs
crates/microdns-federation/: Cargo.toml  build.rs
crates/microdns-federation/src/: coordinator.rs  heartbeat.rs  leaf.rs  lib.rs  replication.rs  sync.rs
crates/microdns-k8s/: Cargo.toml
crates/microdns-k8s/src/: config.rs  lib.rs  reconcile.rs  translate.rs  watch.rs
crates/microdns-lb/: Cargo.toml
crates/microdns-lb/src/: halfopen.rs  icmp.rs  lib.rs  monitor.rs  probe.rs  state.rs
crates/microdns-msg/: Cargo.toml
crates/microdns-msg/src/: events.rs  kafka.rs  lib.rs  nats.rs  noop.rs
crates/microdns-recursor/: Cargo.toml
crates/microdns-recursor/src/: cache.rs  forward.rs  lib.rs  resolver.rs
deploy/: microdns.toml
deploy/packaging/: nfpm.yaml  postinstall.sh
deploy/systemd/: microdns.service
docs/: loadbalancer-design.md  mkube-dhcp-config.md  mkube-static-ip-spec.md
fcos/: README.md  microdns.bu  microdns.toml
k8s/: configmap.yaml  deployment-coordinator.yaml  deployment-leaf.yaml  namespace.yaml  rbac.yaml  service.yaml
proto/: microdns.proto
scripts/: bootstrap-gw252.sh  build-and-push.sh  build-arm-packages.sh  build-container.sh  cleanup-dns.sh  clone-dhcp-reservations.sh  import-zones.sh  setup-rose1.sh  test-dhcp.sh
src/: log_layer.rs  main.rs
