[package]
name = "microdns-api"
version.workspace = true
edition.workspace = true

[dependencies]
microdns-core.workspace = true
microdns-auth.workspace = true
microdns-federation.workspace = true
axum.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
redb.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
hickory-proto.workspace = true

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
