[package]
name = "microdns-core"
version.workspace = true
edition.workspace = true

[dependencies]
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
ipnet.workspace = true
tracing.workspace = true
hickory-proto.workspace = true

[dev-dependencies]
tempfile = "3"
