[package]
name = "microdns-dhcp"
version.workspace = true
edition.workspace = true

[dependencies]
microdns-core.workspace = true
microdns-msg.workspace = true
tokio.workspace = true
socket2 = { workspace = true }
redb.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
ipnet.workspace = true

[dev-dependencies]
tempfile = "3"
