[package]
name = "microdns-k8s"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
microdns-core.workspace = true
tokio.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
futures.workspace = true
redb.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
