[package]
name = "microdns-lb"
version.workspace = true
edition.workspace = true

[dependencies]
microdns-core.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
surge-ping.workspace = true
rand.workspace = true
socket2.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
