[package]
name = "microdns-msg"
version.workspace = true
edition.workspace = true

[dependencies]
microdns-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait = "0.1"
async-nats.workspace = true
futures = "0.3"

[dev-dependencies]
tempfile = "3"
