[package]
name = "microdns-recursor"
version.workspace = true
edition.workspace = true

[dependencies]
microdns-core.workspace = true
hickory-resolver.workspace = true
hickory-proto.workspace = true
tokio.workspace = true
dashmap.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
